hphp/test/slow/readonly/dim_prop_checkrocow.hhas.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot store readonly value in a non-readonly property bar of class Bar.' in %s/dim_prop_checkrocow.hhas:15
%A
